# CpuSchedulingSimulator

./: .gitignore  .qmlls.ini  CMakeLists.txt  CMakeUserPresets.json  GanttChart.cpp  GanttChart.h  Main.qml  NewWindow1.qml  NewWindow2.qml  fcfs.cpp  fcfs.h  main.cpp  processlist.cpp  processlist.h  scheduling.cpp  scheduling.h  schedulingmanager.cpp  schedulingmanager.h  schedulingoutput.cpp  schedulingoutput.h  sjf.cpp  sjf.h
Input/: InputTool.qml  ProcessInput.qml
ListComponent/: FooterComponent.qml  HeaderComponent.qml  ViewDelegate.qml  readonlyViewDelegate.qml
Navigation/: NavigationBar.qml  NavigationButton.qml
listmodel/: GanttChart.cpp  GanttChart.h  processlist.cpp  processlist.h  schedulingoutput.cpp  schedulingoutput.h
manager/: schedulingmanager.cpp  schedulingmanager.h
scheduling/: fcfs.cpp  fcfs.h  hrn.cpp  hrn.h  nonpreemptivepriority.cpp  nonpreemptivepriority.h  preemptivepriority.cpp  preemptivepriority.h  rr.cpp  rr.h  scheduling.h  scheduling.hpp  sjf.cpp  sjf.h  srt.cpp  srt.h
window/: NewWindow1.qml  NewWindow2.qml
